# freecodecamp-challenges

./: .gitmodules  CODE_OF_CONDUCT.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  rock-paper-siccors.yml
src/javascript-algorithmms-and-data-structures/build-a-pokemon-search-app/: index.html  main.ts  scripts.js  styles.css
src/javascript-algorithmms-and-data-structures/build-a-roman-numeral-converter/: index.html  script.js  styles.css
src/javascript-algorithmms-and-data-structures/build-a-telephone-number-validator/: index.html  script.js
src/machine-learning-with-python/rock-paper-scissors/: .rock-paper-sisccors.joblib  README.md  RPS.py  main.py  pyproject.toml
src/sandbox/: index.html  script.js  styles.css  styles.sass
