[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["farbian_2005 <fabian_bernhart@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
